--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,13 @@ github_username:  jekyll
 # Build settings
 markdown: kramdown
 theme: minima
+collections:
+- policies
 plugins:
   - jekyll-feed
+kramdown:
+  auto_ids: false
+
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
